# substrate-parser

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust-cargo-deny.yml  rust-clippy.yml  rust-fmt.yml  rust-test.yml  semantic.yml
examples/: automated_short_meta.rs  automated_short_meta_unmarked_transaction.rs  main.rs  manual_short_meta_with_map.rs
for_tests/: acala2200  astar66  bifrost982  polkadot1000001_v15  polkadot1003003_v15  polkadot9430  statemint1002000  westend9430  westend9430_short_for_transaction  westmint9270  westmint9270_spoiled_digest
src/: additional_types.rs  cards.rs  compacts.rs  cut_metadata.rs  decoding_commons.rs  decoding_sci.rs  decoding_sci_ext.rs  error.rs  lib.rs  metadata_check.rs  printing_balance.rs  propagated.rs  special.rs  special_indicators.rs  special_types.rs  storage_data.rs  tests.rs  traits.rs  unchecked_extrinsic.rs
