[package]
description = "parser for Substrate chain data"
license = "GPL-3.0-or-later"
name = "substrate_parser"
version = "0.4.0"
authors = ["Alexander Slesarev <slesarew@gmail.com>", "Vera Abramova <abramova.vera@gmail.com>"]
edition = "2021"
repository = "https://github.com/Alzymologist/substrate-parser"
homepage = "https://github.com/Alzymologist/substrate-parser"
documentation = "https://docs.rs/substrate_parser/"
keywords = ["parser", "substrate"]
exclude = ["/for_tests", "/.github"]

[dependencies]
base58 = {version = "0.2.0", optional = true}
bitvec = {version = "1.0.1", default-features = false, features = ["alloc"]}
blake2 = {version = "0.10.6", default-features = false, optional = true}
frame-metadata = {version = "16.0.0", default-features = false, features = ["current", "decode"]}
hex = {version = "0.4.3", default-features = false, features = ["alloc"]}
num-bigint = {version = "0.4.3", default-features = false}
plot_icon = {version = "0.3.0", optional = true, default-features = false, features = ["pix"]}
parity-scale-codec = {version = "3.6.4", default-features = false, features = ["derive", "bit-vec"]}
primitive-types = {version = "0.12.1", default-features = false}
scale-info = {version = "2.9.0", default-features = false}
sp-arithmetic = {version = "20.0.0", default-features = false}
sp-core = {version = "24.0.0", optional = true}
sp-core-hashing = {version = "12.0.0", default-features = false}
sp-runtime = {version = "27.0.0", optional = true}

[features]
default = ["std"]
std = ["plot_icon", "sp-core/std", "sp-runtime/std"]
embed-display = ["base58", "blake2"]

[lib]
name = "substrate_parser"
crate-type = ["lib"]
