[package]
description = "parser for Substrate chain data"
license = "GPL-3.0-or-later"
name = "substrate_parser"
version = "0.6.0"
authors = ["Alexander Slesarev <slesarew@gmail.com>", "Vera Abramova <abramova.vera@gmail.com>"]
edition = "2021"
repository = "https://github.com/Alzymologist/substrate-parser"
homepage = "https://github.com/Alzymologist/substrate-parser"
documentation = "https://docs.rs/substrate_parser/"
keywords = ["parser", "substrate"]
exclude = ["/for_tests", "/.github"]

[dependencies]
base58 = {version = "0.2.0"}
bitvec = {version = "1.0.1", default-features = false, features = ["alloc"]}
blake2 = {version = "0.10.6", default-features = false}
external-memory-tools = {version = "0.1.1", default-features = false}
frame-metadata = {version = "16.0.0", default-features = false, features = ["current", "decode"]}
hex = {version = "0.4.3", default-features = false, features = ["alloc"]}
num-bigint = {version = "0.4.3", default-features = false}
plot_icon = {version = "0.3.0", optional = true, default-features = false, features = ["pix"]}
parity-scale-codec = {version = "3.6.9", default-features = false, features = ["derive", "bit-vec"]}
primitive-types = {version = "0.12.2", default-features = false}
scale-info = {version = "2.10.0", default-features = false}
sp-arithmetic = {version = "24.0.0", default-features = false}
sp-core-hashing = {version = "15.0.0", default-features = false}

[features]
default = ["std"]
std = ["external-memory-tools/std", "frame-metadata/std", "plot_icon", "primitive-types/std", "sp-core-hashing/std"]

[lib]
name = "substrate_parser"
crate-type = ["lib"]
